Fix login logo sizing. Fix login error alignment

--- a/src/containers/Login/styles.scss
+++ b/src/containers/Login/styles.scss
@@ -1,9 +1,8 @@
 .container {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background: $background;
     padding: 20px;
 }
@@ -20,14 +19,20 @@
 }
 
 .logo {
-    position: absolute;
     max-width: 80vw;
     max-height: 10vh;
     object-fit: contain;
-    margin-bottom: 20px;
-    top: 20%;
+    margin: 50px 0;
 }
 
 .error {
     color: red;
+    text-align: center;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;    
 }
